--- a/src/global/css/tailwind.css
+++ b/src/global/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .banner {
+    @apply grid gap-2 p-4 px-6 bg-yellow-50 border-l-4 border-l-blue-500;
+  }
+  .banner__title {
+    @apply text-2xl font-bold text-gray-900;
+  }
+}
