--- a/src/components/counter/counter.css
+++ b/src/components/counter/counter.css
@@ -1,10 +1,10 @@
 .counter {
-  @apply flex gap-4 items-center bg-yellow-200 rounded-md max-w-fit p-2;
+  @apply flex gap-4 items-center bg-yellow-200 rounded-full max-w-fit px-2 py-1;
   &__increment,
   &__decrement {
-    @apply flex items-center justify-center bg-slate-300 rounded-full w-8 h-8;
+    @apply flex items-center justify-center bg-yellow-400 rounded-full w-8 h-8;
   }
   span {
-    @apply text-slate-900 font-bold p-2 bg-slate-100 min-w-20 h-10 flex items-center justify-center;
+    @apply text-slate-900 font-bold p-2 bg-slate-100 min-w-20 h-10 flex items-center justify-center rounded-full;
   }
 }
