Added lite-context and improved the decorators to query elements + context provider and consumer example

--- a/src/components/lite-counter/lite-counter.css
+++ b/src/components/lite-counter/lite-counter.css
@@ -1,4 +1,4 @@
-.eco-counter {
+.lite-counter {
   @apply flex gap-4 items-center bg-indigo-200 rounded-md max-w-fit p-2;
   &__increment,
   &__decrement {
