feature/docs added getting started page

--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -66,3 +66,24 @@
 body {
   @apply bg-background text-on-background min-h-[100svh];
 }
+
+.prose {
+  h1 {
+    @apply text-4xl font-bold text-on-background-accent;
+  }
+  h2 {
+    @apply text-3xl font-bold text-on-background-accent;
+  }
+  h3 {
+    @apply text-2xl font-bold text-on-background-accent;
+  }
+  h4 {
+    @apply text-xl font-bold text-on-background-accent;
+  }
+  h5 {
+    @apply text-lg font-bold text-on-background-accent;
+  }
+  h6 {
+    @apply text-base font-bold text-on-background-accent;
+  }
+}
