--- a/apps/docs-lite-elements/src/components/lite-counter/lite-counter.css
+++ b/apps/docs-lite-elements/src/components/lite-counter/lite-counter.css
@@ -1,8 +1,8 @@
-.lite-counter {
+lite-counter {
   @apply flex gap-4 items-center bg-indigo-200 rounded-md max-w-fit p-2;
-  &__increment,
-  &__decrement {
-    @apply flex items-center justify-center bg-indigo-600 text-white rounded-md w-8 h-8;
+  [data-increment],
+  [data-decrement] {
+    @apply flex items-center justify-center bg-indigo-600 hover:bg-indigo-700 active:bg-indigo-800 text-white rounded-md w-8 h-8;
   }
   span {
     @apply text-gray-900 font-bold p-2 bg-gray-100 min-w-20 h-10 flex items-center justify-center rounded-md;
