--- a/apps/docs-lite-elements/src/components/lite-todo-app/lite-todo-app.css
+++ b/apps/docs-lite-elements/src/components/lite-todo-app/lite-todo-app.css
@@ -13,7 +13,7 @@
   }
 
   &__list {
-    @apply flex flex-col bg-background gap-4 rounded-md p-2 w-full min-h-28;
+    @apply flex flex-col bg-background gap-2 rounded-md p-2 w-full min-h-28;
 
     &--complete {
       @apply border-2 border-green-500;
@@ -60,8 +60,14 @@
     &[complete="true"] {
       @apply bg-green-200;
     }
+    & label {
+      @apply flex items-center gap-2 cursor-pointer;
+    }
     & input[type="checkbox"] {
-      @apply w-4 h-4 rounded-md accent-green-500;
+      @apply w-4 h-4 rounded-md accent-green-500 cursor-pointer;
+    }
+    &-remove {
+      @apply text-on-background bg-black/5 rounded-full p-1;
     }
   }
 }
