--- a/apps/docs-lite-elements/src/components/lite-counter/lite-counter.css
+++ b/apps/docs-lite-elements/src/components/lite-counter/lite-counter.css
@@ -1,7 +1,7 @@
 lite-counter {
   @apply flex gap-4 items-center bg-indigo-200 rounded-md max-w-fit p-2;
-  [data-increment],
-  [data-decrement] {
+  [data-ref="increment"],
+  [data-ref="decrement"] {
     @apply flex items-center justify-center bg-indigo-600 hover:bg-indigo-700 active:bg-indigo-800 text-white rounded-md w-8 h-8;
   }
   span {
