--- a/examples/starter/src/styles/tailwind.css
+++ b/examples/starter/src/styles/tailwind.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.prose {
+  h1 {
+    @apply text-4xl font-bold my-6;
+  }
+
+  h2 {
+    @apply text-3xl font-bold my-6;
+  }
+
+  h3 {
+    @apply text-2xl font-bold my-5;
+  }
+
+  h4 {
+    @apply text-xl font-bold my-5;
+  }
+
+  h5 {
+    @apply text-lg font-bold my-4;
+  }
+
+  h6 {
+    @apply text-base font-bold my-4;
+  }
+
+  p {
+    @apply text-base my-4;
+  }
+
+  a {
+    @apply text-blue-600 underline;
+  }
+
+  ul,
+  ol {
+    @apply list-disc pl-8 my-4;
+  }
+
+  code {
+    @apply bg-gray-200 text-sm text-gray-800 rounded-md;
+  }
+
+  pre {
+    code {
+      @apply bg-transparent text-inherit rounded-md my-8;
+    }
+  }
+}
