--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -153,16 +153,16 @@ body {
 
   .banner {
     @apply border-l-4 px-4 py-1 rounded-md;
+  }
 
-    &--alert {
-      @apply bg-yellow-100 border-yellow-500;
-      * {
-        @apply text-yellow-700;
-      }
+  .banner--alert {
+    @apply bg-yellow-100 border-yellow-500;
+    * {
+      @apply text-yellow-700;
     }
+  }
 
-    &__title {
-      @apply font-bold;
-    }
+  .banner__title {
+    @apply font-bold;
   }
 }
