--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -152,7 +152,10 @@ body {
   }
 
   .banner {
-    @apply border-l-4 px-4 py-1 rounded-md;
+    @apply border-l-4 px-4 py-4 rounded-md flex flex-col;
+    p {
+      @apply my-1;
+    }
   }
 
   .banner--alert {
@@ -163,6 +166,13 @@ body {
   }
 
   .banner__title {
-    @apply font-bold;
+    @apply font-bold mb-0;
+  }
+
+  .banner__link {
+    @apply underline self-end inline-flex items-center gap-2 rounded-md p-2;
+    &:hover {
+      @apply text-yellow-900 bg-yellow-50;
+    }
   }
 }
