--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -171,6 +171,6 @@ body {
 
   .banner__link {
     @apply underline self-end inline-flex items-center gap-2 rounded-md p-2;
-    @apply text-yellow-900 bg-yellow-50;
+    @apply hover:text-yellow-900 hover:bg-yellow-50;
   }
 }
