--- a/apps/docs/src/components/api-field/api-field.css
+++ b/apps/docs/src/components/api-field/api-field.css
@@ -2,7 +2,7 @@
   @apply flex flex-col items-start justify-between my-8;
 
   &__top-line {
-    @apply grid grid-cols-[1fr_auto] items-center justify-start w-full gap-y-2 gap-x-4 mb-4;
+    @apply grid md:grid-cols-[1fr_auto] items-center justify-start w-full gap-y-2 gap-x-4 mb-4;
   }
 
   &__name {
