--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -100,7 +100,7 @@
 }
 
 body {
-  @apply bg-background text-on-background min-h-[100svh];
+  @apply bg-background text-on-background min-h-[100svh] w-screen overflow-x-hidden;
 }
 
 .prose {
@@ -153,7 +153,7 @@ body {
 }
 
 .banner {
-  @apply border-l-4 px-4 py-4 rounded-md flex flex-col;
+  @apply border-l-4 px-4 py-4 rounded-md flex flex-col mt-4;
 
   p {
     @apply my-1;
