--- a/apps/docs/src/components/code-block/code-block.css
+++ b/apps/docs/src/components/code-block/code-block.css
@@ -1,3 +1,6 @@
 .code-block {
 	@apply my-8 rounded-md [&_pre.shiki]:col-span-4 [&_pre.shiki]:col-start-2 [&_pre.shiki]:whitespace-pre-wrap [&_pre.shiki]:p-4 [&_pre.shiki]:rounded-md [&_pre.shiki]:overflow-scroll;
+	code {
+		@apply text-xs;
+	}
 }
