--- a/apps/docs/src/components/header/header.css
+++ b/apps/docs/src/components/header/header.css
@@ -1,11 +1,15 @@
 .header {
-	@apply bg-background-accent text-on-background-accent shadow-sm sticky top-0;
+	@apply sticky top-0 z-50 w-full;
+	@apply bg-background border-b border-border;
+
 	&__inner {
-		@apply px-4 py-3 container mx-auto flex items-center justify-between;
-		&-left-side {
+		@apply h-16 px-4 py-3 container mx-auto flex items-center justify-between;
+
+		&-left {
 			@apply flex items-center gap-4;
+
 			.version {
-				@apply text-xs font-semibold bg-background text-on-background px-2 rounded-md;
+				@apply text-[10px] font-heading font-medium tracking-tight bg-background-accent text-on-background/90 px-2 py-0.5 rounded border border-border;
 			}
 		}
 	}
