--- a/apps/docs/src/components/logo/logo.css
+++ b/apps/docs/src/components/logo/logo.css
@@ -1,6 +1,7 @@
 .logo {
-	@apply font-mono font-bold text-xl px-4 py-1.5 -skew-x-6 transition-colors rounded-full;
+	@apply font-bold text-lg tracking-tight;
+	@apply text-on-background;
 	&:hover {
-		@apply bg-background;
+		@apply text-on-background/80;
 	}
 }
