--- a/apps/docs/src/components/navigation/navigation.css
+++ b/apps/docs/src/components/navigation/navigation.css
@@ -1,11 +1,15 @@
 .navigation {
 	ul {
-		@apply flex gap-4;
+		@apply flex items-center gap-5;
 		li {
+			@apply flex items-center;
 			a {
-				@apply text-on-primary-container;
+				@apply text-on-background/80 font-heading font-medium transition-colors duration-150 text-[13px];
 				&:hover {
-					@apply text-on-primary-container/80;
+					@apply text-on-background;
+				}
+				svg {
+					@apply w-4 h-4;
 				}
 			}
 		}
