--- a/apps/docs/src/layouts/base-layout/base-layout.css
+++ b/apps/docs/src/layouts/base-layout/base-layout.css
@@ -1,3 +1,11 @@
+html {
+	scroll-behavior: smooth;
+}
+
+::selection {
+	@apply bg-primary/30 text-on-background;
+}
+
 main {
 	@apply container mx-auto w-screen;
 }
