--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -153,14 +153,31 @@ body {
 }
 
 .banner {
-	@apply border-l-4 px-4 py-4 rounded-md flex flex-col mt-4;
+	@apply relative pl-6 pr-4 py-4 rounded-md flex flex-col mt-4 shadow-sm;
+
+	&::before {
+		content: '';
+		@apply absolute left-2 top-3 bottom-3 w-1 rounded-full bg-current opacity-50;
+	}
 
 	p {
 		@apply my-1;
 	}
 
+	code {
+		@apply p-2 my-1.5;
+
+		p {
+			@apply text-sm;
+		}
+	}
+
 	&--alert {
-		@apply bg-yellow-100 border-yellow-500;
+		@apply bg-yellow-100 border border-yellow-300;
+
+		&::before {
+			@apply bg-yellow-500 opacity-100;
+		}
 
 		p,
 		span,
@@ -170,7 +187,11 @@ body {
 	}
 
 	&--info {
-		@apply bg-blue-100 border-blue-500;
+		@apply bg-blue-100 border border-blue-300;
+
+		&::before {
+			@apply bg-blue-500 opacity-100;
+		}
 
 		p,
 		span,
