--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 :root {
-	--color-night-sky-50-hsla: 222 47% 98%;
-	--color-night-sky-100-hsla: 222 47% 94%;
-	--color-night-sky-200-hsla: 222 40% 88%;
-	--color-night-sky-300-hsla: 222 35% 78%;
-	--color-night-sky-400-hsla: 222 30% 65%;
-	--color-night-sky-500-hsla: 225 45% 45%;
-	--color-night-sky-600-hsla: 225 45% 35%;
-	--color-night-sky-700-hsla: 225 50% 25%;
-	--color-night-sky-800-hsla: 225 55% 15%;
-	--color-night-sky-900-hsla: 225 60% 10%;
-	--color-night-sky-950-hsla: 225 70% 5%;
+	--color-night-sky-50-hsla: 225 100% 98%;
+	--color-night-sky-100-hsla: 225 100% 95%;
+	--color-night-sky-200-hsla: 225 100% 90%;
+	--color-night-sky-300-hsla: 225 90% 80%;
+	--color-night-sky-400-hsla: 225 90% 70%;
+	--color-night-sky-500-hsla: 225 85% 55%;
+	--color-night-sky-600-hsla: 225 85% 45%;
+	--color-night-sky-700-hsla: 225 90% 35%;
+	--color-night-sky-800-hsla: 225 90% 25%;
+	--color-night-sky-900-hsla: 225 80% 15%;
+	--color-night-sky-950-hsla: 225 80% 10%;
 
 	--color-scarlet-100-hsla: 353 100% 89%;
 	--color-scarlet-200-hsla: 351 100% 81%;
@@ -35,8 +35,8 @@
 	--color-glacier-white-600-hsla: 220 8% 58%;
 	--color-glacier-white-700-hsla: 220 10% 35%;
 	--color-glacier-white-800-hsla: 220 12% 25%;
-	--color-glacier-white-900-hsla: 220 15% 8%;
-	--color-glacier-white-950-hsla: 220 20% 3%;
+	--color-glacier-white-900-hsla: 225 15% 5%;
+	--color-glacier-white-950-hsla: 225 20% 2%;
 
 	--color-laser-lemon-50-hsla: 60 100% 98%;
 	--color-laser-lemon-100-hsla: 60 100% 88%;
@@ -100,7 +100,7 @@ html[data-theme='dark'] {
 }
 
 body {
-	@apply bg-background-accent text-on-background min-h-[100svh] w-screen overflow-x-hidden font-sans;
+	@apply bg-background text-on-background min-h-[100svh] w-screen overflow-x-hidden font-sans;
 }
 
 .prose {
@@ -142,7 +142,7 @@ body {
 	}
 
 	code {
-		@apply bg-background-code text-sm text-on-background-code rounded-md font-mono;
+		@apply bg-background-code text-on-background-code rounded-md font-mono;
 	}
 
 	pre {
@@ -158,7 +158,7 @@ body {
 			@apply border-b border-border bg-background-accent/50;
 
 			th {
-				@apply py-3 px-4 font-semibold text-on-background-accent;
+				@apply py-3 px-4 font-semibold text-on-background-accent whitespace-nowrap md:whitespace-normal;
 			}
 		}
 
@@ -178,6 +178,14 @@ body {
 					@apply border-0;
 				}
 			}
+		}
+	}
+
+	.table-wrapper {
+		@apply w-full overflow-x-auto my-8 lg:overflow-x-visible;
+
+		table {
+			@apply my-0;
 		}
 	}
 }
